syntax = "proto3";
package rollapp.timeupgrade.types;

import "gogoproto/gogo.proto";
import "cosmos/upgrade/v1beta1/upgrade.proto";
import "cosmos/msg/v1/msg.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/dymensionxyz/dymension-rdk/x/timeupgrade/types";

// Msg defines the Msg service.
service Msg {
  rpc SoftwareUpgrade(MsgSoftwareUpgrade) returns (MsgSoftwareUpgradeResponse);
  rpc CancelUpgrade(MsgCancelUpgrade) returns (MsgCancelUpgradeResponse);
}

message MsgSoftwareUpgrade {
  cosmos.upgrade.v1beta1.SoftwareUpgradeProposal original_upgrade = 1;
  google.protobuf.Timestamp upgrade_time = 2;
}

message MsgSoftwareUpgradeResponse {}

message MsgCancelUpgrade {
  cosmos.upgrade.v1beta1.SoftwareUpgradeProposal original_upgrade = 1;
}

message MsgCancelUpgradeResponse {}